# PointCloud

./: CMakeLists.txt  IcpManager.cpp  IcpManager.h  Performance.cpp  Performance.h  Plotter.cpp  Plotter.h  main.cpp
model/: bottle_0.ply  bottle_1.ply  juice_0.ply  juice_1.ply  monkey_1.ply
performance/: error.csv  iter.csv  plotter.py  time.csv
performance/Cap/: c_error.csv
performance/CoffeeMug/: cm_error.csv
performance/OfficeChair/: oc_error.csv
performance/OfficeChair/100_maxiters/3D_rotation/: oc_error3D.csv  oc_iters3D.csv  oc_time3D.csv
performance/OfficeChair/100_maxiters/X_rotation/: oc_errorX.csv  oc_itersX.csv  oc_timeX.csv
performance/OfficeChair/100_maxiters/Y_rotation/: oc_errorY.csv  oc_itersY.csv  oc_timeY.csv
performance/OfficeChair/100_maxiters/Z_rotation/: oc_itersZ.csv  oc_timeZ.csv
performance/OfficeChair/200_maxiters/3D_rotation/: oc_error3D.csv  oc_iters3D.csv  oc_time3D.csv
performance/OfficeChair/200_maxiters/X_rotation/: oc_errorX.csv  oc_itersX.csv  oc_timeX.csv
performance/OfficeChair/200_maxiters/Y_rotation/: oc_errorY.csv  oc_itersY.csv  oc_timeY.csv
performance/OfficeChair/200_maxiters/Z_rotation/: oc_errorZ.csv  oc_itersZ.csv  oc_timeZ.csv
performance/Table/: t_error.csv
